# enterprise-auth-server

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  (+7 more)
backend/app/core/: audit.py  config.py  cookies.py  crypto.py  exceptions.py  logging.py  passwords.py  security.py  useragent.py
backend/app/db/: base.py  seed.py  session.py  types.py
backend/app/dependencies/: auth.py  providers.py
backend/app/middleware/: rate_limit.py  security.py
backend/app/models/: __init__.py  associations.py  email_token.py  oauth_account.py  permission.py  role.py  session.py  two_factor.py  user.py
backend/app/redis/: client.py
backend/app/repositories/: base.py  email_token.py  oauth_account.py  role.py  session.py  two_factor.py  user.py
backend/app/schemas/: auth.py  common.py  email.py  oauth.py  session.py  two_factor.py  user.py
backend/app/services/: auth.py  email_account.py  geoip.py  notifications.py  rate_limit.py  session.py  token.py  two_factor.py
backend/migrations/: env.py
backend/migrations/versions/: 27a02d36d4fb_initial_schema.py  7cdc29eb5f85_add_oauth_accounts.py  7e9a6c8a7b0d_add_email_tokens.py  7f751a27a5ad_composite_indexes.py  (+2 more)
backend/tests/: conftest.py  factories.py  test_auth.py  test_config.py  test_email.py  test_failclosed.py  test_misc.py  test_oauth.py  test_oauth_providers.py  test_passwords.py  test_rbac.py  test_security.py  test_sessions.py  test_two_factor.py  test_uow_durability.py
(+12 files in other folders)
