[project]
name = "enterprise-auth-server"
version = "0.1.0"
description = "Production-grade enterprise authentication server (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "redis>=5.2",
    "python-multipart>=0.0.20",
    "email-validator>=2.2",
    "cryptography>=44.0",
    "pyotp>=2.9",
    "qrcode>=8.0",
    "pillow>=11.0",
    "user-agents>=2.2",
    "aiosmtplib>=3.0",
    "httpx>=0.28",
    "uuid6>=2024.7.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "factory-boy>=3.3",
    "faker>=33.1",
    "fakeredis>=2.26",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["app/main.py", "migrations/*", "tests/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
